Fix drawer toggle mis-alignment due to incorrect line-height.

--- a/src/layout/_layout.scss
+++ b/src/layout/_layout.scss
@@ -214,8 +214,6 @@
     }
 
     @media screen and (min-width: $layout-screen-size-threshold + 1px) {
-      line-height: $layout-header-desktop-row-height;
-
       .mdl-layout--no-desktop-drawer-button &,
       .mdl-layout--fixed-drawer > &,
       .mdl-layout--no-drawer-button & {
